<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/course_work_item"
        android:id="@+id/addItemTextView"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:id="@+id/imageView"
        android:src="@drawable/add"
        android:layout_marginLeft="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category"
            android:id="@+id/textViewCategory"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spinnerCategories"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textViewName"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextName"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade"
            android:id="@+id/textViewGrade"
            android:layout_marginLeft="10dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarGrade"
            android:layout_weight="0.85"
            android:indeterminate="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPercentage"
            android:text="@string/zero_percent" />
    </LinearLayout>

</LinearLayout>